fixes contrasted type color

--- a/bender/sass/colors.scss
+++ b/bender/sass/colors.scss
@@ -1,7 +1,8 @@
-//$maincolor: #eb6056; //red
-$maincolor: #35c3d9; //blue
-//$maincolor: #000000; //black
-//$maincolor: #C00058; //Magenta
+$text-color-contrasted: false;
+  $maincolor: #eb6056; $text-color-contrasted:#fff; //red
+//$maincolor: #35c3d9; $text-color-contrasted:#fff; //blue
+  $maincolor: #000000; $text-color-contrasted:#fff; //black
+  $maincolor: #C00058; $text-color-contrasted:#fff;//Magenta
 $textcolor:#333;
 $linkcolor:#069;
 $contrasted-default-dark:   #000;
